--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,18 +1,28 @@
 body
 {
+    background: #1e1f24;
     color: #333;
     text-align: center;
-    font-family: Courier;
+    font-family: Arial;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 
 #cabecera
 {
-    background: #33a;
+    background: #37488B;
     box-shadow: 0px 5px 30px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 2em;
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline
@@ -31,8 +41,12 @@ body
     margin: 0 auto;
 }
 
-
 #container h1
 {
     font-size: 20px;
+}
+#post
+{
+    background: white;
+    padding: 1em;
 }
