--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,10 @@ body
 {
     color: #333;
     text-align: center;
-    font-family: Courier;
+    font-family: Arial;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 
 #cabecera
@@ -31,8 +34,20 @@ body
     margin: 0 auto;
 }
 
-
 #container h1
 {
     font-size: 20px;
+}
+
+#post
+{
+    padding: 1em;
+}
+
+#footer
+{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
 }
